# course_2_home_works

./: .gitignore  README.md  main.py  pyproject.toml
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  reader_csv_xlsx.py  search.py  sorting_by_key.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reader_csv_xlsx.py  test_search.py  test_sorting_by_key.py  test_utils.py  test_widget.py
